--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+  background-color: #ccc;
+}
+#cadeira{
+  width: 100%;
+}
 h1{
   text-align: center;
 }
@@ -9,3 +15,19 @@ h1{
 p {
   text-align: center;
 }
+#LOL{
+  color: #FF0000;
+}
+
+img{
+  border:inset red 5px;
+}
+*{
+  text-align: center;
+}
+.item{
+  font-style: italic;
+}
+#beneficios{
+  width: 100%;
+  }
