--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+.principal{
+  background: #CCCCCC;
+}
 body{
-  background-color: #ccc;
+  background-color: ;
 }
 #cadeira{
   width: 100%;
@@ -10,7 +13,11 @@ h1{
 #missao{
   font-size: 20px;
 }
-
+ul{
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
+}
 
 p {
   text-align: center;
@@ -22,12 +29,21 @@ p {
 img{
   border:inset red 5px;
 }
-*{
+
+
+h2{
   text-align: center;
 }
 .item{
   font-style: italic;
 }
+
 #beneficios{
+  width: 50%;
+}
+
+.beneficios{
   width: 100%;
+  background-color: white;
+  padding: 20px
   }
