--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
-.principal{
-  background: #CCCCCC;
+.titulo-principal {
+  padding-left: 20px;
 }
-body{
+
+.principal {
+  background: #CCCCC;
+}
+
+body {
   background-color: ;
 }
-#cadeira{
+
+#cadeira {
   width: 100%;
 }
-h1{
-  text-align: center;
-}
-#missao{
+
+#missao {
   font-size: 20px;
 }
-ul{
+
+ul {
   display: inline-block;
   vertical-align: top;
   width: 20%;
@@ -22,28 +27,33 @@ ul{
 p {
   text-align: center;
 }
-#LOL{
+
+#LOL {
   color: #FF0000;
 }
 
-img{
-  border:inset red 5px;
+img {
+  border: inset red 5px;
 }
 
-
-h2{
+.texto-centralizado {
   text-align: center;
 }
-.item{
+
+.item {
   font-style: italic;
 }
 
-#beneficios{
+#beneficios {
   width: 50%;
 }
 
-.beneficios{
+.beneficios {
   width: 100%;
   background-color: white;
   padding: 20px
-  }
+}
+
+h2 {
+  text-align: center;
+}
