--- a/produtos.css
+++ b/produtos.css
@@ -1,3 +1,6 @@
+h1 img{
+  margin-left: 10%;
+}
 header{
   background: #bbbbbb;
 }
@@ -5,6 +8,9 @@ header{
 nav li {
   display: inline;
   margin: 0 0 0 15px;
+}
+nav ul{
+ 
 }
 
 nav a {
@@ -23,12 +29,23 @@ nav a {
 
 .produtos li{
   display: inline-block;
-  background-color: #cccccc;
   text-align: center;
   width: 30%;
   vertical-align: top;
+  margin: 0 1.5%;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  border-radius: 10px;
 }
 .produtos h2{
   font-size: 30px;
+  font-weight: bold;
+}
+.produtos-descricao{
+  font-size: 18px;
+}
+.produtos-preco{
+  font-size: 22px;
   font-weight: bold;
 }
