--- a/produtos.css
+++ b/produtos.css
@@ -17,9 +17,14 @@ nav a {
   text-transform: uppercase;
   color: #000000;
   font-weight: bold;
-  text-decoration: none;
+  text-decoration:none;
   font-size: 22px;
   
+}
+
+nav a:hover {
+  color: #c78c19;
+  text-decoration: underline;
 }
 .produtos{
   width: 940px;
@@ -48,4 +53,24 @@ nav a {
 .produtos-preco{
   font-size: 22px;
   font-weight: bold;
+}
+.produtos li:hover{
+  border-color: #c78c19;;
+}
+.produtos li:active{
+  border-color: #088c19;
+}
+.produtos li:hover h2{
+  font-size: 34px;
+}
+
+footer{
+  background: url("bg.jpg");
+  padding: 40px 0;
+  text-align: center;
+}
+.copyright{
+ color: #ffffff;
+  font-size: 13px;
+  margin-top: 20px;
 }
