--- a/produtos.css
+++ b/produtos.css
@@ -1,7 +1,8 @@
-h1 img{
+h1 img {
   margin-left: 10%;
 }
-header{
+
+header {
   background: #bbbbbb;
 }
 
@@ -9,30 +10,30 @@ nav li {
   display: inline;
   margin: 0 0 0 15px;
 }
-nav ul{
- 
-}
+
+nav ul {}
 
 nav a {
   text-transform: uppercase;
   color: #000000;
   font-weight: bold;
-  text-decoration:none;
+  text-decoration: none;
   font-size: 22px;
-  
+
 }
 
 nav a:hover {
   color: #c78c19;
   text-decoration: underline;
 }
-.produtos{
+
+.produtos {
   width: 940px;
   margin: 0 auto;
   padding: 50px;
 }
 
-.produtos li{
+.produtos li {
   display: inline-block;
   text-align: center;
   width: 30%;
@@ -43,34 +44,42 @@ nav a:hover {
   border: 2px solid #000000;
   border-radius: 10px;
 }
-.produtos h2{
+
+.produtos h2 {
   font-size: 30px;
   font-weight: bold;
 }
-.produtos-descricao{
+
+.produtos-descricao {
   font-size: 18px;
 }
-.produtos-preco{
+
+.produtos-preco {
   font-size: 22px;
   font-weight: bold;
 }
-.produtos li:hover{
-  border-color: #c78c19;;
+
+.produtos li:hover {
+  border-color: #c78c19;
+  ;
 }
-.produtos li:active{
+
+.produtos li:active {
   border-color: #088c19;
 }
-.produtos li:hover h2{
+
+.produtos li:hover h2 {
   font-size: 34px;
 }
 
-footer{
+footer {
   background: url("bg.jpg");
   padding: 40px 0;
   text-align: center;
 }
-.copyright{
- color: #ffffff;
+
+.copyright {
+  color: #ffffff;
   font-size: 13px;
   margin-top: 20px;
 }
