--- a/style-principal.css
+++ b/style-principal.css
@@ -83,3 +83,27 @@ footer {
   font-size: 13px;
   margin-top: 20px;
 }
+
+
+
+
+
+
+main{
+  width : 940px;
+  margin: 0 auto;
+}
+
+form{
+  margin: 40px 0;
+}
+form label{
+  display: block;
+  font-size: 20px;
+  margin-bottom: 10 px;
+}
+
+form input{
+  display: block;
+  
+}
