--- a/style-principal.css
+++ b/style-principal.css
@@ -89,27 +89,51 @@ footer {
 
 
 
-main{
-  width : 940px;
+main {
+  width: 940px;
   margin: 0 auto;
 }
 
-form{
+form {
   margin: 40px 0;
 }
-form label, form legend{
+
+form label,
+form legend {
   display: block;
   font-size: 20px;
   margin-bottom: 10 px;
 }
 
-.input-padrao{
+.input-padrao {
   display: block;
   margin-bottom: 10px;
   padding: 10px 25px;
   width: 50%;
 }
 
-.checkbox{
+.checkbox {
   margin: 20px 0;
+}
+
+
+.enviar {
+  width: 40%;
+  padding: 15px 0;
+  background-color: orange;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  margin-top:10px;
+  transition: 2s all;
+  ;
+  ;
+}
+
+.enviar:hover{
+  background-color: red;
+  cursor: pointer;
+  transform: scale(1.2);
 }
