--- a/style-principal.css
+++ b/style-principal.css
@@ -90,8 +90,7 @@ footer {
 
 
 main {
-  width: 940px;
-  margin: 0 auto;
+  
 }
 
 form {
@@ -155,13 +154,42 @@ td,th{
 
 .mapa{
 padding: 3em 0;
-  
+  width: 940px;
+  margin: 0 auto;
+  background: linear-gradient(#FEFEFE,#8B8B8B);
 }
 .mapa p{
   margin: 0 0 2em;
   text-align: center;
+  
 }
 .video{
   width: 560px;
   margin: 1em auto;
+}
+
+.principal{
+  background: #fefefe;
+  padding: 1em 0;
+  width: 940px;
+  margin: 0 auto;
+}
+.beneficios {
+  background: #8888888;
+  padding: 3em 0;
+  width: 940px;
+  margin: 0 auto;
+}
+
+.lista-beneficios{
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
+}
+imagens-beneficios{
+  width: 50%;
+}
+.mapa-conteudo{
+  margin: 0 0 2em;
+  text-align: center;
 }
